--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anik Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Anik Kumer</span> World!</h1>
+            <h3>Web Developer</h3>
+            <p>A web developer portfolio is an online collection of your best web dev projects that accurately represent
+                your skills, your abilities, and the quality of your work. It acts as a curated collection of your
+                proudest
+                professional web development examples you can show potential employers or clients to get yourself hired.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/itzanikkumar/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
