--- a/index.html
+++ b/index.html
@@ -20,13 +20,27 @@
             <h3>Web Developer</h3>
             <p>A web developer portfolio is an online collection of your best web dev projects that accurately represent
                 your skills, your abilities, and the quality of your work. It acts as a curated collection of your
-                proudest
-                professional web development examples you can show potential employers or clients to get yourself hired.
+                proudest professional web development examples you can show potential employers or clients to get
+                yourself hired.
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/itzanikkumar/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big </h1>
+            <h2>Become a web developer</h2>
+            <p>To the outsisde eye, it can seem like a complicated, confusing, and somewhat inaccessible field. So, to
+                shed some light on this fascinating industry, we have put together ultimate introduction to web
+                development and what it takes to become a fully-fledged web developer.</p>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
